add cosmos db support

--- a/WebApplication/WebApplication/appsettings.json
+++ b/WebApplication/WebApplication/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=app.db;Cache=Shared"
   },
+  "CosmosSettings": {
+    "DatabaseName": "",
+    "AccountUri": "",
+    "AccountKey": ""
+  },
   "SwaggerOptions": {
     "JsonRoute": "swagger/{documentName}/swagger.json",
     "Description": "Our API",
