--- a/WebApplication/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication/WebApplication.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="Cosmonaut" Version="2.11.3" />
         <PackageReference Include="Cosmonaut.Extensions.Microsoft.DependencyInjection" Version="2.3.0" />
         <PackageReference Include="Humanizer.Core" Version="2.10.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.13" />
         <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.9" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.9" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.9" />
